...
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginTop="@dimen/space_7"
                android:background="?attr/colorOutline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_reset_button"
                style="@style/Widget.GiveOrTake.Button.Danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:minHeight="@dimen/size_button"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/settings_reset_action" />
...
